--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,378 @@
-/* место для вашего кода */
+/*Кнопка*/
+.bet-button{
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 25.83px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 12px 32px;
+}
+
+/*Секция шапки*/
+.header{
+    display: grid;
+    grid-template-columns: 3fr 2fr 2fr;
+    width: 1052px;
+    height: 105px;
+    top: 92px;
+    left: 24px;
+    gap: 0px;
+    opacity: 0px;  
+    background-color: #fff;
+    margin-top: 92px;
+    margin-bottom: 96px;   
+}
+.header__menu{
+    display: flex;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: left;
+    position: relative;
+    text-align: center;
+    padding: 44px 36px 39px 26.5px;
+    column-gap: 33px;
+}
+.header__links-list-item {
+    white-space: nowrap;
+  }
+  /*УБРАТЬ КРУГ*/
+.header__links-list-item_no-bullit{
+    list-style-type:none;
+}
+
+ul{
+    list-style-type: circle;
+}
+.header__logo{
+    width: 129.11px;
+    height: 104.65px;
+    top: 1.16px;
+    left: 9.03px;
+    gap: 0px;
+    opacity: 0px;
+    position: relative;
+}
+.address{
+    width: 240.52px;
+    height: 98px;
+    top: 5px;
+    left: 786px;
+    border: 1px 0px 0px 0px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.3px;
+    padding-left:37.7px ;
+    padding-top: 8px;
+}
+
+/*секция - COVER*/
+.cover{
+    background: url(../images/cover.jpg) center no-repeat;
+    padding: 165px 50px 50px;
+    color: #fff;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+}
+
+/*ОНО ТЕБЕ НАДО*/
+.cover__title{
+    display: flex;
+    flex-direction: column;
+    font-family: Raleway;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 115px;
+    letter-spacing: 0.3em;
+    text-align: left;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 1;
+    row-gap: 20px;
+    position: relative;
+}
+.aligned-text_center{
+    text-align: center;
+    font-family: Raleway;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 100px;
+    letter-spacing: 0.3em;
+}
+
+.aligned-text_right{
+    text-align: right;
+    font-family: Raleway;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 100px;
+    letter-spacing: 0.3em;
+}
+/*Сдвиг букв*/
+.letter-spacing-extended{
+    letter-spacing:0.6em;
+}
+/*Сброс окончания у последней буквы*/
+.no-letter-spacing{
+    letter-spacing: normal;
+}
+.overlay{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.5);
+}
+/*Аукцион вещей, вкоторые никто не верил*/
+.cover__description{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    word-spacing: 20px;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    align-items: center;
+    margin-top: 135px; 
+    position: relative;
+    z-index: 1; 
+}
+.cover__description-text{
+    text-transform: uppercase;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    margin-left: 26px;
+}
+/*конец cover*/
+
+
+/* начало LOOOOOTS*/
+.lots{
+    margin: 0;
+    padding-top: 180px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+.lots__heading{
+    margin: 0;
+    padding: 0 0 0 40px;
+    width: 121px;
+    height: 47px;
+    left: 40px;
+    font-family: Raleway;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px;
+    text-align: left;
+    text-transform: uppercase;
+}
+.lots__card-list{
+    margin: 27px 0 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    list-style: none;
+}
+.lots__card-list-item{
+    width: 334px;
+    min-height: 563px;
+    flex-grow: 1;
+}
+.card-link{
+    position: relative;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    height: 100%;
+    padding: 51px 40px 48px;
+    /*задание позиции все артам*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.card_type_film{
+    background-image: url(../images/card-lot-01.jpg);
+}
+.card_type_book{
+    background-image: url(../images/card-lot-02.jpg);
+}
+.card_type_picture{
+    background-image: url(../images/card-lot-03.jpg);
+}
+.card__title{
+    font-size: 23px;
+    line-height: 26px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    z-index: 1;
+    font-weight: 700;
+    color: #fff;
+}
+.card__text{
+    font-size: 20px;
+    line-height: 24px;
+    z-index: 1;
+    font-weight: 400;
+    color: #fff;
+}
+.lots__look-more-link{
+    padding: 0 0 0 40px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23.48px;
+}
+/*конец lots*/
+
+/*начало about*/
+.about{ 
+    margin: 146px 24px 180px;
+}
+.about__column{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 40px;
+    grid-template-areas: 
+    "about__logo first__title first__title"
+    ". about__text about__text " 
+}
+.about__logo{
+    display: grid;
+    width: 240px;
+    height: 240px;
+    background-color: black;
+    border-radius: 50%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self:center;
+    align-self: center;
+    padding: 59px 42px 62px;
+}
+.about__logo-image{
+    position: relative;
+
+    width: 141.54px;
+    height: 112.55px;
+    justify-self:center;
+    align-self: center;
+}
+.first__title{
+    position: relative;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px;
+
+    padding-top: 120px;
+    padding-left: 13px;
+    padding-bottom: 100px;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+}
+.about__text{
+    padding-left: 13px;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+.text1{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+    text-align: left;
+}
+.text2{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    padding-top: 24px;
+}
+/*конец about*/
+
+/*начало footer*/
+
+.footer{
+    margin: 180px 50px 88px;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+.footer__menu-list{
+    list-style-type:none;
+}
+.footer__menu-link_active{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: center;
+}
+.footer__menu-list-item{
+font-size: 18px;
+font-weight: 400;
+line-height: 21.13px;
+text-align: center;
+}
+.footer__menu-link{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: center;
+}
+.none-dicor{
+    text-decoration: none;
+}
+.footer__social-list{ 
+    list-style-type:none;  
+}
+.footer__social-list-item{
+    display: flex;
+    width: Hug (240px)px;
+    height: Hug (48px)px;
+    top: 2843px;
+    left: 810px;
+    gap: 48px;
+    opacity: 0px;
+    list-style-type:none;
+    justify-content: space-between;
+}
+.footer__social-link{
+    width: 48px;
+    height: 48px;
+}
+.footer__address{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.3px;
+    letter-spacing: 0.01em;
+    text-align: left;
+    width: 240.52px;
+    height: 98px;
+    top: 2842px;
+    left: 50px;
+}
+/*конец footer*/
