--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,11 @@
     display: grid;
     grid-template-columns: 3fr 2fr 2fr;
     width: 1052px;
-    height: 105px;
+
     top: 92px;
     left: 24px;
     gap: 0px;
-    opacity: 0px;  
+     
     background-color: #fff;
     margin-top: 92px;
     margin-bottom: 96px;   
@@ -52,23 +52,26 @@ ul{
 .header__logo{
     width: 129.11px;
     height: 104.65px;
-    top: 1.16px;
-    left: 9.03px;
+    
+    
     gap: 0px;
-    opacity: 0px;
+    
     position: relative;
 }
 .address{
-    width: 240.52px;
-    height: 98px;
+    max-width: 240.52px;
+    
     top: 5px;
     left: 786px;
-    border: 1px 0px 0px 0px;
+
     font-size: 18px;
     font-weight: 400;
     line-height: 24.3px;
     padding-left:37.7px ;
     padding-top: 8px;
+}
+.header__address{
+    font-style: normal; 
 }
 
 /*секция - COVER*/
@@ -129,7 +132,7 @@ ul{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 / 0.5);
+    background-color: rgb(0 0 0 / 0.6);
 }
 /*Аукцион вещей, вкоторые никто не верил*/
 .cover__description{
@@ -169,8 +172,8 @@ ul{
 .lots__heading{
     margin: 0;
     padding: 0 0 0 40px;
-    width: 121px;
-    height: 47px;
+    
+    
     left: 40px;
     font-family: Raleway;
     font-size: 40px;
@@ -353,10 +356,9 @@ text-align: center;
     display: flex;
     width: Hug (240px)px;
     height: Hug (48px)px;
-    top: 2843px;
-    left: 810px;
+   
     gap: 48px;
-    opacity: 0px;
+    
     list-style-type:none;
     justify-content: space-between;
 }
@@ -370,9 +372,10 @@ text-align: center;
     line-height: 24.3px;
     letter-spacing: 0.01em;
     text-align: left;
-    width: 240.52px;
-    height: 98px;
+    max-width: 240.52px;
+    
     top: 2842px;
     left: 50px;
+    font-style: normal; 
 }
 /*конец footer*/
