--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ ul{
     position: relative;
     z-index: 1;
     row-gap: 20px;
-    position: relative;
+    
 }
 .aligned-text_center{
     text-align: center;
@@ -292,22 +292,16 @@ ul{
     grid-row-start: 2;
     grid-row-end: 3;
 }
-.Glavtext{
-    
+.glav__text{
     padding-left:11px;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.01em;
     text-align: left;
-}
-.DopText{
-    padding-left:11px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-    padding-top: 24px;
+    display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 /*конец about*/
 
@@ -361,7 +355,7 @@ text-align: center;
 .footer__social-link_proba{
     padding-left: 2px;
 }
-.Contact__information{
+.contact__information{
     font-size: 18px;
     font-weight: 400;
     line-height: 24.3px;
